--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 </head>
 
 <body>
+  <div class="login-container">
 
+    <h2>Login Form Group 1</h2>
+    <form class="login-form">
+      <input type="text" name="username" placeholder="Username">
+      <input type="password" name="password" placeholder="Password">
+      <input type="submit" value="Login">
+    </form>
+  
+   </div>
 </body>
 
 </html>
